Issue fixed - on toggling filter from second page was not working

--- a/src/Unni.ToDo.UI/Components/Pages/ToDo.razor
+++ b/src/Unni.ToDo.UI/Components/Pages/ToDo.razor
@@ -361,6 +361,7 @@ else
     private void ToggleShowPendingTodos()
     {
         showOnlyPendingItems = showOnlyPendingItems ? false : true;
+        currentPage = 1;
         LoadPageAsync();
     }
 
