Project further splitted into COre and Infrastructure

--- a/src/Unni.ToDo.UI/Components/Pages/ToDo.razor
+++ b/src/Unni.ToDo.UI/Components/Pages/ToDo.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @rendermode InteractiveServer
 @inject HttpClient HttpClient;
-@using Unni.ToDo.Common.DTOs;
+@using Unni.ToDo.Core.DTOs;
 <h2>ToDo List</h2>
 
 @if (todos == null && !IsDataEmpty)
